--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
 *.safetensors filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
+output_w2v.txt filter=lfs diff=lfs merge=lfs -text
