--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.safetensors filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
 output_w2v.txt filter=lfs diff=lfs merge=lfs -text
+*.pdf filter=lfs diff=lfs merge=lfs -text
